Definidos div, header, main e footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Link Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap"
     rel="stylesheet">
 
   <!-- Link Phosphor Icons -->
@@ -24,6 +24,10 @@
   <title>Deseafio #21 - Carrinho de Compras</title>
 </head>
 <body>
-    
+    <div id="app">
+        <header>Header</header>
+        <main>Main</main>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
