--- a/index.html
+++ b/index.html
@@ -18,16 +18,29 @@
   <!-- Link Phosphor Icons -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-  <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
-
-
   <title>Deseafio #21 - Carrinho de Compras</title>
 </head>
 <body>
     <div id="app">
-        <header>Header</header>
+        <header>
+          <div class="title">
+            Seu carrinho tem <strong>5 itens</strong>
+          </div>
+
+          <i class="ph ph-x"></i>
+        </header>
         <main>Main</main>
-        <footer>Footer</footer>
+        <footer>
+          <div class="total">
+            <span>Total:</span>
+            <strong>R$ 10.608,60</strong>
+          </div>
+          <div class="cupon">
+            <i class="ph ph-tag"></i>
+            <span>Adicionar cupom</span>
+          </div>
+          <button>Finalizar compra</button>
+        </footer>
     </div>
 </body>
 </html>
