--- a/index.html
+++ b/index.html
@@ -12,35 +12,90 @@
   <!-- Link Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
 
   <!-- Link Phosphor Icons -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
   <title>Deseafio #21 - Carrinho de Compras</title>
 </head>
-<body>
-    <div id="app">
-        <header>
-          <div class="title">
-            Seu carrinho tem <strong>5 itens</strong>
-          </div>
 
-          <i class="ph ph-x"></i>
-        </header>
-        <main>Main</main>
-        <footer>
-          <div class="total">
-            <span>Total:</span>
-            <strong>R$ 10.608,60</strong>
+<body>
+  <div id="app">
+    <header>
+      <div class="title">
+        Seu carrinho tem <strong>5 itens</strong>
+      </div>
+
+      <i class="ph ph-x"></i>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+      <div class="item">
+        <img src="https://i.ibb.co/hCC7NRX/product-image-cadeira.jpg" alt="Imagem de uma cadeira game">
+        <div class="details">
+          <div class="title">Texto</div>
+          <div class="price-qty">
+            <div class="price"></div>
+            <div class="qty">
+              <button class="sub">
+                <i class="ph ph-minus"></i>
+              </button>
+              <span>1</span>
+              <button class="add">
+                <i class="ph ph-plus"></i>
+              </button>
+            </div>
           </div>
-          <div class="cupon">
-            <i class="ph ph-tag"></i>
-            <span>Adicionar cupom</span>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="https://i.ibb.co/Qckyp3g/product-image-monitor.jpg" alt="Imagem de um monitor">
+        <div class="details">
+          <div class="title">Texto</div>
+          <div class="price-qty">
+            <div class="price"></div>
+            <div class="qty">
+              <button class="sub">
+                <i class="ph ph-minus"></i>
+              </button>
+              <span>1</span>
+              <button class="add">
+                <i class="ph ph-plus"></i>
+              </button>
+            </div>
           </div>
-          <button>Finalizar compra</button>
-        </footer>
-    </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="" alt="">
+      </div>
+      <div class="item">
+        <img src="" alt="">
+      </div>
+      <div class="item">
+        <img src="" alt="">
+      </div>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="total">
+        <span>Total:</span>
+        <strong>R$ 10.608,60</strong>
+      </div>
+      <div class="cupon">
+        <i class="ph ph-tag"></i>
+        <span>Adicionar cupom</span>
+      </div>
+      <button>Finalizar compra</button>
+    </footer>
+  </div>
+
+
+  <!-- Cards criados, iniciando Css -->
 </body>
 </html>
