--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 
     <!-- MAIN -->
     <main>
+
       <div class="item">
         <img src="https://i.ibb.co/hCC7NRX/product-image-cadeira.jpg" alt="Imagem de uma cadeira game">
         <div class="details">
-          <div class="title">Texto</div>
+          <div class="title">Cadeira Gamer  RGB - Preta com Iluminação (Led)</div>
           <div class="price-qty">
-            <div class="price"></div>
+            <div class="price">R$ 959,90</div>
             <div class="qty">
               <button class="sub">
                 <i class="ph ph-minus"></i>
@@ -54,9 +55,9 @@
       <div class="item">
         <img src="https://i.ibb.co/Qckyp3g/product-image-monitor.jpg" alt="Imagem de um monitor">
         <div class="details">
-          <div class="title">Texto</div>
+          <div class="title">Monitor Gamer Curvo 49 DQHD, 240Hz, 1ms, HDMI e </div>
           <div class="price-qty">
-            <div class="price"></div>
+            <div class="price">R$ 8.599,90</div>
             <div class="qty">
               <button class="sub">
                 <i class="ph ph-minus"></i>
@@ -69,6 +70,45 @@
           </div>
         </div>
       </div>
+
+      <div class="item">
+        <img src="https://i.ibb.co/hCC7NRX/product-image-cadeira.jpg" alt="Imagem de uma cadeira game">
+        <div class="details">
+          <div class="title">Cadeira Gamer  RGB - Preta com Iluminação (Led)</div>
+          <div class="price-qty">
+            <div class="price">R$ 959,90</div>
+            <div class="qty">
+              <button class="sub">
+                <i class="ph ph-minus"></i>
+              </button>
+              <span>1</span>
+              <button class="add">
+                <i class="ph ph-plus"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="https://i.ibb.co/Qckyp3g/product-image-monitor.jpg" alt="Imagem de um monitor">
+        <div class="details">
+          <div class="title">Monitor Gamer Curvo 49 DQHD, 240Hz, 1ms, HDMI e </div>
+          <div class="price-qty">
+            <div class="price">R$ 8.599,90</div>
+            <div class="qty">
+              <button class="sub">
+                <i class="ph ph-minus"></i>
+              </button>
+              <span>1</span>
+              <button class="add">
+                <i class="ph ph-plus"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </main>
 
     <!-- FOOTER -->
